<resources>
    <string name="app_name">Tournament Manager</string>
    <string name="signIn_button">Sign In</string>
    <string name="signUp_button">Sign Up</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="password_again">Repeat Password</string>
    <string name="intro_text">Please sign in to continue</string>
    <string name="login_failed">Login failed.</string>
    <string name="signup_failed">Signup failed.</string>
    <string name="nomatch_password">Passwords do not match</string>
    <string name="signIn_info">Sign in to continue</string>
    <string name="signUp_info">Create an account to continue</string>
    <string name="signIn_new">Need an account? Create one.</string>
    <string name="signUp_new">Have an account? Login.</string>
    <string name="label_name">Name</string>
    <string name="label_maxTeams">Max teams</string>
    <string name="label_sport">Sport</string>
    <string name="label_rounds">Number of rounds</string>
    <string name="label_public">Public</string>
    <string name="label_signUp">Sign up expiration</string>
    <string name="label_create">Create tournament</string>
    <string name="subscribe">Subscribe</string>
    <string name="label_editTournament">Edit tournament</string>
    <string name="label_save">Save</string>
    <string name="label_search">Search</string>
    <string-array name="sports">
        <item>Football</item>
        <item>Handball</item>
        <item>Basketball</item>
    </string-array>

    <string name="at_max_teams">Already at max teams</string>

    <string name="title_activity_view_tournament">ViewTournamentActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <!-- activity_view_tournament -->
    <string name="label_delete_tournament">Delete</string>
    <string name="label_start_tournament">Start</string>
    <string name="label_edit_tournament">Edit</string>
    <string name="no_tournaments">No tournaments</string>

    <!-- scoreboard_fragment -->
    <string name="header_team">Team</string>
    <string name="header_gamesPlayed">Games</string>
    <string name="header_goalsFor">For</string>
    <string name="header_goalsAgainst">Against</string>
    <string name="header_points">Points</string>
    <string name="msg_scoreboard_empty">Scoreboard is empty</string>
    <string name="msg_no_teams">No teams were found</string>
    Scoreboard is empty


    <!-- matches_fragment -->
    <string name="header_home">Home</string>
    <string name="header_away">Away</string>
    <string name="header_round">Round</string>
    <string name="header_played">Played</string>
    <string name="msg_no_matches">No matches exist</string>
    <string name="toast_invalid_match_score">Error: Match score has to be non negative number</string>
    <string name="Setting_Match_Score_Failed">Setting match score failed</string>


</resources>
